<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/im_movie_background"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_background_img_size"
                android:contentDescription="@string/movie_screenshot"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:padding="10dp"
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_movie_title_size"
                android:textColor="@color/colorAccent"
                tools:text="Title" />

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/im_movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/poster_img_content_description" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/release_date"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tv_movie_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/detail_movie_year_size"
                        android:textColor="@color/colorAccent"

                        tools:text="2017" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/detail_movie_element_title_size"
                        android:text="@string/rating"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tv_movie_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/detail_movie_score_size"
                        android:textColor="@color/colorAccent"
                        tools:text="7.5/10" />
                    <Button
                        android:id="@+id/bt_favorite"
                        android:padding="5dp"
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/add_favorite"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_movie_title_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/overview"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/detail_overview_size" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:singleLine="false"
                android:textSize="@dimen/detail_overview_size"
                android:textColor="@color/colorAccent"
                tools:text="Description" />
            <TextView
                android:id="@+id/tv_movie_title_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:text="@string/trailers"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/detail_overview_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_movie_title_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"

                android:text="@string/reviews"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/detail_overview_size" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLightGray"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>